deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: python-app
 labels:
    app: python
spec:
  replicas: 1
  selector:
     matchLabels:
       app: python
  template:
    metadata:
      labels:
       app: python
    spec:
      containers:
       - name: python
         image: "replace_with_image_url"
         ports:
           - containerPort: 5000
