service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app-svc
  annotations:
    networking.gke.io/max-rate-per-endpoint: "10"
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: python
  type: ClusterIP
