httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: hpa-httproute
spec:
  parentRefs:
  - kind: Gateway
    name: hpa-gateway   

  rules:
  - backendRefs:
      - name: python-app-svc 
        port: 5000
    matches:
     - path:
        type: PathPrefix
        value: /
